--- a/home/style.css
+++ b/home/style.css
@@ -83,7 +83,7 @@
   .hero {
     height: 90vh;
     background: linear-gradient(rgba(15,23,42,0.55), rgba(15,23,42,0.55)),
-                url("/assets/philips-ind.jpg") center/cover no-repeat;
+            url("../assets/philips-ind.jpg") center/cover no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
